--- a/lab-one.html
+++ b/lab-one.html
@@ -17,6 +17,8 @@
       <nav>
         <!-- works like <a href="/index.html">Home</a> -->
         <a href="/">Home</a>
+        <a href="/form">Form</a>
+        
       </nav>
     </header>
     <main>
@@ -83,7 +85,7 @@
                         <tr>
                             <td>First cell-third row</td>
                             <td>Second cell-third row</td>
-                            <
+                            
                         </tr>
                     </tbody>
                 </table>
